syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract;

// Classes System Definitions

message Timestamp {
  string time = 1;
  string command = 2;
}

message Student {
  string studentId = 1;
  string studentName = 2;
}

message ServerEntry {
  string port = 1;
  repeated string qualifiers = 2;
}

message ClassState {
  int32 capacity = 1;
  bool openEnrollments = 2;
  repeated Student enrolled = 3;
  repeated Student discarded = 4;
  repeated Timestamp timestamps = 5;
}

enum ResponseCode {
  OK = 0;
  NON_EXISTING_STUDENT = 1;
  FULL_CLASS = 2;
  STUDENT_ALREADY_ENROLLED = 3;
  ENROLLMENTS_ALREADY_OPENED = 4;
  ENROLLMENTS_ALREADY_CLOSED = 5;
  INACTIVE_SERVER = 6;
  WRITING_NOT_SUPPORTED = 7;
}
